# Game-Engine-Programming

./: .gitignore  CMakeLists.txt  Doxygen.doxy  Engine.sln  generateMakeFile.bat
Engine/: AABB.cpp  Audio.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Controller.cpp  Controller.h  CubeMap.cpp  CubeMap.h  CustomDestructors.cpp  CustomDestructors.h  Engine.vcxproj  Engine.vcxproj.filters  GameModel.cpp  GameModel.h  GameObject.cpp  GameObject.h  GameVariables.cpp  Graphics.cpp  Graphics.h  HeightMap.cpp  HeightMap.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshRenderer.cpp  MeshRenderer.h  Physics.cpp  Physics.h  Platform.cpp  Platform.h  Resource.cpp  (+14 more)
Engine/components/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  CollisionShape.cpp  CollisionShape.h  Component.cpp  Component.h  ExpiryTimer.cpp  ExpiryTimer.h  ExplosiveCollision.cpp  ExplosiveCollision.h  Light.cpp  Light.h  MeshComponent.cpp  MeshComponent.h  MeshRenderer.cpp  MeshRenderer.h  RigidBody.cpp  RigidBody.h  ShipController.cpp  ShipController.h  SkyBoxRenderer.cpp  SkyBoxRenderer.h  SphereCollider.cpp  SphereCollider.h  Transform.cpp  Transform.h
Engine/dependencies/: SDL.h  SDL_image.h  SDL_mixer.h  SDL_ttf.h
Engine/input/: Controller.cpp  Controller.h  InputManager.cpp  InputManager.h
Engine/misc/: AABB.cpp  AABB.h  BulletDebugDrawer.cpp  BulletDebugDrawer.h  Colour.cpp  Colour.h  (+17 more)
Tools/: Doxyfile  generateMakeFileMAC.sh  generateMakeFileUNIX.sh  generateMakeFileWIN.bat  makeFileGenerator.py
(+53 files in other folders)
